ops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-app-service
spec:
  selector:
    app: backend-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: backend-port
