ops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mynodeapp-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: mynode.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-app-service
                port:
                  number: 80
